@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-17T01:17:57Z",
+  "timestamp" : "2022-11-17T08:21:02Z",
   "count_outdated" : 665,
   "uniques_outdated" : 378,
-  "count" : 684,
-  "uniques" : 386,
+  "count" : 685,
+  "uniques" : 387,
   "clones" : [
     {
       "timestamp": "2022-11-03T00:00:00Z",
@@ -51,6 +51,13 @@
       "timestamp": "2022-11-16T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
