@@ -1,3 +1,11 @@
+2022-11-17T08:21:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3486531042 # 1036
+* notice: last 14d: unq all: 5 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 378 665 / 386 684
+* notice: next accum: outdated-unq outdated-all / unq all: 378 665 / 387 685
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-17]
+
 2022-11-17T01:17:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3484514375 # 1035
 * notice: last 14d: unq all: 5 19
